--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body {
 }
 
 .header {
-  background-image: url(/images/header-bg.jpg);
+  background-image: url(../images/header-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom center;
@@ -214,15 +214,15 @@ body {
 }
 
 .school__item--abode::before {
-  background-image: url(/images/abode-icon.svg);
+  background-image: url(../images/abode-icon.svg);
 }
 
 .school__item--flight::before {
-  background-image: url(/images/airplane-icon.svg);
+  background-image: url(../images/airplane-icon.svg);
 }
 
 .school__item--training::before {
-  background-image: url(/images/surfing-icon.svg);
+  background-image: url(../images/surfing-icon.svg);
 }
 
 .school__items .school__item:first-child .school__item-title {
@@ -270,7 +270,7 @@ body {
 }
 
 .descr {
-  background-image: url(/images/descr-bg.jpg);
+  background-image: url(../images/descr-bg.jpg);
   background-repeat: no-repeat;
   background-position: right top;
   background-size: 50%;
@@ -367,7 +367,7 @@ body {
 }
 
 .gallery__video {
-  background-image: url(/images/video-bg.jpg);
+  background-image: url(../images/video-bg.jpg);
   height: 600px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -401,7 +401,7 @@ body {
 }
 
 .blog-slider {
-  background-image: url(/images/slider-bg.jpg);
+  background-image: url(../images/slider-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
